--- a/CryptoConsultancy/CryptoConsultancy/.env
+++ b/CryptoConsultancy/CryptoConsultancy/.env
@@ -1,7 +1,7 @@
-PUSHER_APP_ID="1261484"
-PUSHER_KEY="5e72295100417fe7c808"
-PUSHER_SECRET="677a502c06954858d465"
-PUSHER_CLUSTER="ap3"
+PUSHER_APP_ID=""
+PUSHER_KEY=""
+PUSHER_SECRET=""
+PUSHER_CLUSTER=""
 
-AGORA_APP_ID="4111d307edb44f2ca4b1ca82fa5d8d9c"
-AGORA_APP_CERTIFICATE="0a6de20093f342249100fc150f0d936e"
+AGORA_APP_ID=""
+AGORA_APP_CERTIFICATE=""
